--- a/frontend/style.css
+++ b/frontend/style.css
@@ -51,3 +51,12 @@ li {
     color:#CC8F46;
     font-size: 130px;
 }
+
+.museum-history {
+    padding-top: 70px;
+    font-family: 'News Cycle', sans-serif;
+    color: antiquewhite;
+    font-size: 16px;
+
+}
+
